--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml"
-      th:with="lang=${#locale.language}" th:lang="${lang}" layout:decorate="~{fragments/layout}">
+<html xmlns:th="http://www.thymeleaf.org"
+      th:with="lang=${#locale.language}" th:lang="${lang}"
+      th:replace="~{fragments/layout :: layout (~{::body})}">
 <head>
     <div th:include="fragments/headerFragment.html"></div>
     <title>leopet || Home</title>
@@ -8,7 +9,7 @@
 
 <body>
 
-<section class="banner_part" layout:fragment="section1">
+<section class="banner_part">
     <div class="container">
         <div class="row align-content-center">
             <div class="col-lg-7 col-xl-6">
@@ -25,7 +26,7 @@
 <!-- banner part start-->
 
 <!-- about part start-->
-<section class="about_part section_padding"  layout:fragment="section2">
+<section class="about_part section_padding">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6">
@@ -50,7 +51,7 @@
 <!-- about part start-->
 
 <!-- service part start-->
-<section class="service_part section_padding services_bg"  layout:fragment="section3">
+<section class="service_part section_padding services_bg">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
@@ -93,7 +94,7 @@
 <!-- service part end-->
 
 <!-- counter adopt number here -->
-<section class="abopt_number_counter section_padding"  layout:fragment="section4">
+<section class="abopt_number_counter section_padding">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-lg-5 col-md-6">
@@ -128,7 +129,7 @@
 <!-- counter adopt number end -->
 
 <!-- client review part here -->
-<section class="client_review" layout:fragment="section5">
+<section class="client_review">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-7">
@@ -159,7 +160,7 @@
 <!-- client review part end -->
 
 <!-- about part start-->
-<section class="about_part section_padding"  layout:fragment="section6">
+<section class="about_part section_padding">
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-6">
