--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -1,10 +1,221 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org"
+      th:with="lang=${#locale.language}" th:lang="${lang}"
+      th:replace="~{fragments/layout :: layout (~{::body})}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <div th:include="fragments/headerFragment.html"></div>
+    <title>leopet || Home</title>
 </head>
+
 <body>
+<section class="banner_part">
+    <div class="container">
+        <div class="row align-content-center">
+            <div class="col-12">
+                <h2>Pets and Visits</h2>
+                <div class="my-custom-scrollbar my-custom-scrollbar-primary">
+                    <table class="table table-striped" th:object="${owner}">
+                        <tr th:each="pet : ${owner.pets}">
+                            <td>
+                                <dl class="dl-horizontal">
+                                    <dt>Name</dt>
+                                    <dd th:text="${pet.name}"/>
+                                    </dd>
+                                    <dt>Birth Date</dt>
+                                    <dd th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"/>
+                                    </dd>
+                                    <dt>Type</dt>
+                                    <dd th:text="${pet.petType}"/>
+                                    </dd>
+                                </dl>
+                            </td>
+                            <td>
+                                <table>
+                                    <thead>
+                                    <tr style="font-size: x-large;">
+                                        <th style="width: 25%">Visit Date</th>
+                                        <th style="width: 50%">Description</th>
+                                        <th style="width: 25%">Vet</th>
+                                    </tr>
+                                    </thead>
+                                    <tr th:each="visit : ${pet.visits}">
+                                        <td style="width: 25%"
+                                            th:text="${#temporals.format(visit.dateVisit, 'yyyy-MM-dd')}"></td>
+                                        <td style="width: 50%" th:text="${visit?.description}"></td>
+                                        <td>
+                                            <a style="width: 25%" th:href="@{/vet/__${visit.vet.id}__}"
+                                               th:text="${visit.vet.firstName + ' ' + visit.vet.lastName}"></a>
+                                        </td>
+                                    </tr>
+
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- banner part start-->
+
+<!-- about part start-->
+<section class="about_part section_padding">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md-6">
+                <div class="about_img">
+                    <img th:src="@{/img/about.png}" alt="">
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="about_text">
+                    <img th:src="@{/img/about_icon.png}" class="about_icon" alt="">
+                    <h2>We care your pet
+                        As you care</h2>
+                    <p>Working in conjunction with humanitarian aid agencies, we have supported programmes to help
+                        alleviate human suffering through animal welfare when people might depend on livestock as their
+                        only source of income or food.</p>
+                    <a href="#" class="btn_1">About Us</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- about part start-->
+
+<!-- service part start-->
+<section class="service_part section_padding services_bg">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="section_tittle text-center">
+                    <img th:src="@{/img/about_icon.png}" alt="">
+                    <h2>We Provide Best Services</h2>
+                    <p>Working in conjunction with humanitarian aid agencies, we have supported programmes to help
+                        alleviate human suffering through animal welfare when people might depend.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6">
+                <div class="single_service_part">
+                    <img th:src="@{/img/single_service_1.png}" alt="#">
+                    <h3>Pet Surgeries</h3>
+                    <p>Our free veterinary services are available to pets whose owners are on certain means-tested
+                        benefits.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="single_service_part">
+                    <img th:src="@{/img/single_service_2.png}" alt="#">
+                    <h3>Pet Adoption</h3>
+                    <p>Our free veterinary services are available to pets whose owners are on certain means-tested
+                        benefits.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="single_service_part">
+                    <img th:src="@{/img/single_service_3.png}" alt="#">
+                    <h3>Pet Care</h3>
+                    <p>Our free veterinary services are available to pets whose owners are on certain means-tested
+                        benefits.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- service part end-->
+
+<!-- counter adopt number here -->
+<section class="abopt_number_counter section_padding">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-lg-5 col-md-6">
+                <div class="counter_text">
+                    <h2>We need your help
+                        Adopt Us</h2>
+                    <p>Working in conjunction with humanitarian aid agencies, we have supported programmes alleviate
+                        human.</p>
+                    <div class="counter_number">
+                        <div class="single_counter_number">
+                            <img th:src="@{/img/adopt_icon_1.png}" alt="#">
+                            <h3><span class="count">590</span>+</h3>
+                            <p>Pets Available</p>
+                        </div>
+                        <div class="single_counter_number">
+                            <img th:src="@{/img/adopt_icon_2.png}" alt="#">
+                            <h3><span class="count">300</span>+</h3>
+                            <p>Happy Clients</p>
+                        </div>
+                    </div>
+                    <a href="#" class="btn_1">Brows Now</a>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <div class="adopt_image">
+                    <img th:src="@{/img/adopt_img.png}" alt="#">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- counter adopt number end -->
+
+<!-- client review part here -->
+<section class="client_review">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-7">
+                <div class="client_review_content owl-carousel">
+                    <div class="singke_client_review">
+                        <img th:src="@{/img/review_img_1.png}" alt="#">
+                        <h4>" Working in conjunction with humanitarian aid agencies we have supported programmes to
+                            alleviate.</h4>
+                        <p>- Jon Miller</p>
+                    </div>
+                    <div class="singke_client_review">
+                        <img th:src="@{/img/review_img_1.png}" alt="#">
+                        <h4>" Working in conjunction with humanitarian aid agencies we have supported programmes to
+                            alleviate.</h4>
+                        <p>- Jon Miller</p>
+                    </div>
+                    <div class="singke_client_review">
+                        <img th:src="@{/img/review_img_1.png}" alt="#">
+                        <h4>" Working in conjunction with humanitarian aid agencies we have supported programmes to
+                            alleviate.</h4>
+                        <p>- Jon Miller</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- client review part end -->
+
+<!-- about part start-->
+<section class="about_part section_padding">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md-6">
+                <div class="about_img">
+                    <img th:src="@{/img/valunteer_img.png}" alt="">
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="about_text">
+                    <img th:src="@{/img/about_icon.png}" class="about_icon" alt="">
+                    <h2>Become a Volunteer
+                        To help them</h2>
+                    <p>A created won't created subdue a every green his set which above firmament earth firmament. Seed
+                        firmament be likeness fruitful to called waters. Given great said seasons his midst beast.</p>
+                    <a href="#" class="btn_1">read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
+
 </html>
