--- a/pet-clinic-web/src/main/resources/templates/about.html
+++ b/pet-clinic-web/src/main/resources/templates/about.html
@@ -1,21 +1,14 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{fragments/layout :: layout (~{::body})}">
 
 <head>
     <!-- Required meta tags -->
 
     <title>leopet || about</title>
-    <div th:include="fragments/headerFragment.html"></div>
 </head>
 
 <body>
-<!--::header part start::-->
-<header class="header_area">
-    <div th:include="fragments/header.html"></div>
-    <!--::menu bar::-->
-    <div th:include="fragments/menu.html"></div>
-</header>
-<!-- Header part end-->
 
 <!--::breadcrumb part start::-->
 <section class="breadcrumb breadcrumb_bg">
@@ -248,10 +241,7 @@
         </div>
     </div>
 </footer>
-<!-- footer part end-->
 
-<!-- jquery plugins here-->
-<div th:include="fragments/scriptFragment.html"></div>
 </body>
 
 </html>
