--- a/pet-clinic-web/src/main/resources/templates/fragments/layout.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/layout.html
@@ -44,7 +44,8 @@
 
             <div class="col-auto">
                 <div th:if="${#httpServletRequest.remoteUser != null}">
-                    <h3 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h3>
+                        <a th:href="@{/owners/details} "><h3 th:inline="text">Hello
+                            [[${#httpServletRequest.remoteUser}]]!</h3></a>
                 </div>
             </div>
             <div class=" col-auto">
@@ -69,70 +70,12 @@
         </div>
     </div>
 </div>
-<div class="main_menu">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="ti-menu"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <div th:if="!${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
-                                <li class="nav-item">
-                                    <a th:href="@{/about}" class="nav-link">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/services}" class="nav-link">services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/gallery}" class="nav-link">gallery</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Pages
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" th:href="@{elements.html}">Elements</a>
-                                        <a class="dropdown-item" th:href="@{single-blog.html}">Single blog</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/blog}" class="nav-link">blog</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/contact}" class="nav-link">Contact</a>
-                                </li>
-                            </div>
-
-                            <div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
-                                <li class="nav-item">
-                                    <a th:href="@{/owners}" class="nav-link">Owners</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/owners/find}" class="nav-link">Find Owners</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/pets}" class="nav-link">Pets</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a th:href="@{/pets/find}" class="nav-link">Find Pets</a>
-                                </li>
-                            </div>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </div>
+<div th:if="!${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+    <div th:insert="~{fragments/menu :: menu}"></div>
 </div>
-
-<!-- banner part start-->
+<div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+    <div th:insert="~{fragments/menu :: admin-menu}"></div>
+</div>
 <div class="container-fluid">
 
     <section th:include="${template}"/>
