--- a/pet-clinic-web/src/main/resources/templates/owner/findOwners.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/findOwners.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
       th:replace="~{fragments/layout :: layout (~{::body})}">
 <head>
     <meta charset="UTF-8">
@@ -7,38 +7,33 @@
 </head>
 <body>
 <div class="container xd-container">
-    <br/>
-    <br/>
-    <h2>Find Owners</h2>
-    <br/>
-    <br/>
-
-    <form th:object="${owner}" th:action="@{/owners}" method="get"
-          class="form-horizontal" id="search-owner-form">
-        <div class="form-group">
-            <div class="control-group" id="lastNameGroup">
-                <label class="col-sm-2 control-label">Last name </label>
-                <div class="col-sm-10">
-                    <input class="form-control" th:field="*{lastName}" size="30"
-                           maxlength="80"/>
-                    <span class="help-inline">
+        <br/>
+        <br/>
+        <h2>Find Owners</h2>
+        <br/>
+        <br/>
+        <form th:object="${owner}" th:action="@{/owners}" method="get" class="form-horizontal" id="findOwner">
+            <div class="form-group">
+                <div class="control-group" id="lastNameGroup">
+                    <label class="col-sm-2 control-label">Last name </label>
+                    <div class="col-sm-10">
+                        <input class="form-control" th:field="*{lastName}" size="30" maxlength="80"/>
+                        <span class="help-inline">
                         <div th:if="${#fields.hasAnyErrors()}">
                             <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
                         </div>
                     </span>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="form-group ">
-            <div class="col-4">
-                <button type="submit" class="btn btn-default">Find
-                    Owner
-                </button>
+            <div class="form-group ">
+                <div class="col-4">
+                    <button type="submit" class="btn-dark">Find Owner</button>
+                </div>
+                <div class="col-4">
+                    <a class="btn" th:href="@{/owners/new}">Add Owner</a></div>
             </div>
-            <div class="col-4">
-                <a class="btn btn-default" th:href="@{/owners/new}">Add Owner</a></div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 </body>
 </html>
