--- a/pet-clinic-web/src/main/resources/templates/fragments/selectField.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/selectField.html
@@ -1,18 +1,18 @@
+
 <html>
 <body>
 <form>
-    <th:block th:fragment="input (label, name, type)">
+    <th:block th:fragment="select (label, name, items)">
         <div th:with="valid=${!#fields.hasErrors(name)}"
              th:class="${'form-group' + (valid ? '' : ' has-error')}"
              class="form-group">
             <label class="col-sm-2 control-label" th:text="${label}">Label</label>
+
             <div class="col-sm-10">
-                <div th:switch="${type}">
-                    <input th:case="'text'" class="form-control" type="text" required="required" th:field="*{__${name}__}" />
-                    <input th:case="'date'" class="form-control" type="text" required="required" th:field="*{__${name}__}"
-                           placeholder="yyyy-MM-dd" title="Enter a date in this format: YYYY-MM-DD"
-                           pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))"/>
-                </div>
+                <select th:field="*{__${name}__}">
+                    <option th:each="item : ${items}" th:value="${item}"
+                            th:text="${item}">dog</option>
+                </select>
                 <span th:if="${valid}"
                       class="glyphicon glyphicon-ok form-control-feedback"
                       aria-hidden="true"></span>
